--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-community/slider": "^4.4.2",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/material-design-icons": "^7.4.47",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.0.17",
-    "@shopify/flash-list": "1.7.1",
+    "@shopify/flash-list": "^1.7.3",
     "cheerio": "1.0.0-rc.12",
     "color": "^4.2.3",
     "dayjs": "^1.11.10",
-    "expo": "^52.0.28",
+    "expo": "^53.0.0-canary-20250219-4a5dade",
     "expo-clipboard": "~7.0.0",
     "expo-document-picker": "~13.0.1",
     "expo-file-system": "~18.0.4",
@@ -56,9 +56,8 @@
     "i18n-js": "^3.8.0",
     "lodash-es": "^4.17.21",
     "protobufjs": "^7.2.6",
-    "react": "18.3.1",
-    "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
-    "react-native": "^0.77.0",
+    "react": "^19.0.0",
+    "react-native": "^0.78.0",
     "react-native-background-actions": "^4.0.1",
     "react-native-device-info": "^8.4.7",
     "react-native-drawer-layout": "^4.0.3",
@@ -68,10 +67,10 @@
     "react-native-mmkv": "^3.1.0",
     "react-native-pager-view": "^6.6.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^4.0.0-beta.2",
     "react-native-saf-x": "^2.2.3",
-    "react-native-safe-area-context": "~5.1.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.0-beta.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-tab-view": "^4.0.5",
     "react-native-url-polyfill": "^2.0.0",
@@ -85,27 +84,23 @@
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "^15.0.1",
     "@react-native-community/cli-platform-android": "^15.0.1",
-    "@react-native/eslint-config": "^0.77.0",
-    "@react-native/metro-config": "^0.77.0",
-    "@react-native/typescript-config": "^0.77.0",
+    "@react-native/babel-preset": "^0.78.0",
+    "@react-native/eslint-config": "^0.78.0",
+    "@react-native/metro-config": "^0.78.0",
+    "@react-native/typescript-config": "^0.78.0",
     "@types/color": "^3.0.3",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "^18.2.6",
+    "@types/react": "^19.0.0",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-react-compiler": "^19.0.0-beta-21e868a-20250216",
     "eslint": "^8.19.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
-    "eslint-plugin-react-native": "^4.1.0",
     "husky": "^7.0.4",
-    "jest": "~29.7.0",
     "lint-staged": "^12.3.7",
-    "metro-react-native-babel-preset": "^0.76.9",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.9",
     "typescript": "^5.1.3"
