upgrade expo 53, react native 0.79.1

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
           "enableFTS": false,
           "useSQLCipher": false
         }
-      ]
+      ],
+      "expo-web-browser"
     ]
   }
 }
