--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@cd-z/react-native-epub-creator": "^2.0.4",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@legendapp/list": "^1.0.0-beta.24",
-    "@react-native-community/slider": "^4.4.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-vector-icons/common": "^11.0.0",
@@ -35,48 +35,47 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.0.17",
-    "@shopify/flash-list": "^1.7.3",
-    "@tanstack/react-query": "^5.70.0",
+    "@shopify/flash-list": "1.7.6",
     "cheerio": "1.0.0-rc.12",
     "color": "^4.2.3",
     "dayjs": "^1.11.10",
-    "expo": "^52.0.28",
-    "expo-clipboard": "~7.0.0",
-    "expo-document-picker": "~13.0.1",
-    "expo-file-system": "~18.0.4",
-    "expo-haptics": "~14.0.0",
-    "expo-keep-awake": "~14.0.1",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-localization": "~16.0.0",
-    "expo-navigation-bar": "~4.0.4",
-    "expo-notifications": "~0.29.8",
-    "expo-speech": "~13.0.0",
-    "expo-sqlite": "~15.0.3",
-    "expo-web-browser": "~14.0.1",
+    "expo": "^53.0.4",
+    "expo-clipboard": "~7.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-file-system": "~18.1.8",
+    "expo-haptics": "~14.1.4",
+    "expo-keep-awake": "~14.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-localization": "~16.1.5",
+    "expo-navigation-bar": "~4.2.3",
+    "expo-notifications": "~0.31.1",
+    "expo-speech": "~13.1.6",
+    "expo-sqlite": "~15.2.9",
+    "expo-web-browser": "~14.1.6",
     "htmlparser2": "^9.1.0",
     "i18n-js": "^3.8.0",
     "lodash-es": "^4.17.21",
     "protobufjs": "^7.2.6",
     "react": "^19.0.0",
-    "react-native": "^0.78.0",
+    "react-native": "0.79.1",
     "react-native-background-actions": "^4.0.1",
-    "react-native-device-info": "^8.4.7",
+    "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.0.3",
     "react-native-error-boundary": "^1.1.16",
-    "react-native-gesture-handler": "^2.22.1",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-lottie-splash-screen": "^1.0.1",
     "react-native-mmkv": "^3.1.0",
-    "react-native-pager-view": "^6.6.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "~3.17.4",
     "react-native-saf-x": "^2.2.3",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.8.0",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-tab-view": "^4.0.5",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "^13.13.2",
+    "react-native-webview": "13.13.5",
     "react-native-zip-archive": "^7.0.0",
     "sanitize-html": "^2.13.0",
     "urlencode": "^2.0.0"
@@ -96,7 +95,7 @@
     "@types/color": "^3.0.3",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "^19.0.0",
+    "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
@@ -112,7 +111,7 @@
     "lint-staged": "^12.3.7",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.9",
-    "typescript": "^5.1.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.28.0"
   },
   "resolutions": {
