--- a/package.json
+++ b/package.json
@@ -83,39 +83,26 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/runtime": "^7.25.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.23.0",
-    "@react-native-community/cli": "^15.0.1",
-    "@react-native-community/cli-platform-android": "^15.0.1",
-    "@react-native/babel-preset": "^0.78.0",
-    "@react-native/eslint-config": "^0.78.0",
-    "@react-native/metro-config": "^0.78.0",
-    "@react-native/typescript-config": "^0.78.0",
-    "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli-platform-android": "18.0.0",
+    "@react-native/babel-preset": "0.79.1",
+    "@react-native/eslint-config": "0.79.1",
+    "@react-native/metro-config": "0.79.1",
+    "@react-native/typescript-config": "0.79.1",
     "@types/color": "^3.0.3",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/sanitize-html": "^2.11.0",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
-    "eslint": "^9.23.0",
-    "eslint-plugin-ft-flow": "^3.0.11",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-native": "^5.0.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.1",
+    "eslint": "^8.19.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.9",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.28.0"
-  },
-  "resolutions": {
-    "@types/react": "^17"
+    "typescript": "5.0.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
