fix: exact vesion for core packages

--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "i18n-js": "^3.8.0",
     "lodash-es": "^4.17.21",
     "protobufjs": "^7.2.6",
-    "react": "^19.0.0",
-    "react-native": "0.79.1",
+    "react": "19.0.0",
+    "react-native": "0.78.2",
     "react-native-background-actions": "^4.0.1",
     "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.0.3",
@@ -81,21 +81,22 @@
     "urlencode": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native/babel-preset": "0.79.1",
-    "@react-native/eslint-config": "0.79.1",
-    "@react-native/metro-config": "0.79.1",
-    "@react-native/typescript-config": "0.79.1",
+    "@babel/core": "7.25.2",
+    "@babel/preset-env": "7.25.3",
+    "@babel/runtime": "7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native/babel-preset": "0.78.2",
+    "@react-native/eslint-config": "0.78.2",
+    "@react-native/metro-config": "0.78.2",
+    "@react-native/typescript-config": "0.78.2",
     "@types/color": "^3.0.3",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "~19.0.10",
+    "@types/react": "19.0.10",
     "@types/sanitize-html": "^2.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1",
+    "babel-plugin-react-compiler": "19.0.0-beta-af1b7da-20250417",
     "eslint": "^8.19.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
