--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,4 +16,6 @@ jobs:
       - name: Install modules
         run: npm install
       - name: Run ESLint
-        run: npm run lint
+        run: |
+          npm run lint
+          npm run type-check
