--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prestart": "node scripts/setEnvFile.cjs Debug",
     "start": "react-native start",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
+    "type-check": "tsc --noEmit",
     "prettier": "prettier --write \"./src/**/*.{js,jsx,ts,tsx}\" ./scripts",
     "buildRelease": "node scripts/setEnvFile.cjs Release && cd android && ./gradlew clean && ./gradlew assembleRelease",
     "open": "open ./android/app/build/outputs/apk/release/",
