feat: IOS (unusable)

--- a/package.json
+++ b/package.json
@@ -88,12 +88,13 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "7.25.3",
     "@babel/runtime": "7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native/babel-preset": "0.78.2",
-    "@react-native/eslint-config": "0.78.2",
-    "@react-native/metro-config": "0.78.2",
-    "@react-native/typescript-config": "0.78.2",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli-platform-android": "^18.0.0",
+    "@react-native-community/cli-platform-ios": "^18.0.0",
+    "@react-native/babel-preset": "^0.79.2",
+    "@react-native/eslint-config": "^0.79.2",
+    "@react-native/metro-config": "^0.79.2",
+    "@react-native/typescript-config": "^0.79.2",
     "@types/color": "^3.0.3",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
