--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,10 +67,13 @@ jobs:
       - name: Make Gradlew Executable
         run: cd android && chmod +x ./gradlew
 
+      - name: Build Android Debug
+        run: |
+          cd android && ./gradlew assembleDebug --no-daemon
+
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease --no-daemon
-          mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/LNReader.apk
 
       - name: Set Env
         run: |
@@ -78,28 +81,18 @@ jobs:
           echo "COMMIT_COUNT=$(git rev-list --count HEAD)" >> $GITHUB_ENV
           echo "COMMIT_ID=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: Upload Artifact
+      - name: Upload Debug Artifact
         env:
           COMMIT_COUNT: ${{ env.COMMIT_COUNT }}
         uses: actions/upload-artifact@v4
         with:
           name: LNReader-r${{ env.COMMIT_COUNT }}
-          path: android/app/build/outputs/apk/release/LNReader.apk
-
-      - name: Build Custom APK
+          path: android/app/build/outputs/apk/release/app-debug.apk
+  
+      - name: Upload Release Artifact
         env:
           COMMIT_COUNT: ${{ env.COMMIT_COUNT }}
-          COMMIT_ID: ${{ env.COMMIT_ID }}
-        run: |
-          sed -i 's/LNReader/LNReader-r${{ env.COMMIT_COUNT }}(${{ env.COMMIT_ID }})/g' android/app/src/main/res/values/strings.xml
-          cd android && ./gradlew assembleRelease --no-daemon -PcustomAppId=com.rajarsheechatterjee.LNReader.commit_${{ env.COMMIT_ID }}
-          mv app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/LNReader-r${{ env.COMMIT_COUNT }}\(${{ env.COMMIT_ID }}\)-customID.apk
-
-      - name: Upload Custom APK
-        env:
-          COMMIT_COUNT: ${{ env.COMMIT_COUNT }}
-          COMMIT_ID: ${{ env.COMMIT_ID }}
         uses: actions/upload-artifact@v4
         with:
-          name: LNReader-r${{ env.COMMIT_COUNT }}(${{ env.COMMIT_ID }})-customID
-          path: android/app/build/outputs/apk/release/LNReader-r${{ env.COMMIT_COUNT }}(${{ env.COMMIT_ID }})-customID.apk
+          name: LNReader-r${{ env.COMMIT_COUNT }}
+          path: android/app/build/outputs/apk/release/app-release.apk
