--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   workflow_dispatch:
   push:
@@ -13,8 +14,11 @@ jobs:
       - name: Clone Repository (Latest)
         uses: actions/checkout@v4
         with:
+          repository: LNReader/lnreader
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+          
+      - name: Setup Node.js v20
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
