--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "android": {
       "javaPackageName": "com.lnreader.spec"
     },
-    "ios": { 
+    "ios": {
       "modulesProvider": {
         "NativeEpubUtil": "RCTNativeEpubUtil",
         "NativeFile": "RCTNativeFile",
@@ -39,6 +39,7 @@
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-community/slider": "4.5.6",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-documents/picker": "^10.1.7",
     "@react-native-google-signin/google-signin": "^14.0.0",
     "@react-native-vector-icons/common": "^12.0.0",
     "@react-native-vector-icons/material-design-icons": "^12.0.0",
@@ -76,7 +77,6 @@
     "react-native-drawer-layout": "^4.1.8",
     "react-native-edge-to-edge": "^1.6.0",
     "react-native-error-boundary": "^2.0.0",
-    "react-native-file-access": "^3.1.1",
     "react-native-gesture-handler": "~2.25.0",
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-mmkv": "^3.2.0",
