--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -1,11 +1,13 @@
-name: Typescript
+# Temporarily Disabled
+name: Type Check
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master
+  # pull_request:
+  #   branches:
+  #     - master
 
 jobs:
   build:
@@ -16,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Install modules
+      - name: Install Modules
         run: npm install
       - name: Check Types
         run: npm run type-check
