--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native": "0.79.2",
     "react-native-background-actions": "^4.0.1",
     "react-native-device-info": "^14.0.4",
+    "react-native-draggable-flatlist": "^4.0.2",
     "react-native-drawer-layout": "^4.1.8",
     "react-native-edge-to-edge": "^1.6.0",
     "react-native-error-boundary": "^2.0.0",
