--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-native-google-signin/google-signin": "^14.0.0",
     "@react-native-vector-icons/common": "^12.0.0",
     "@react-native-vector-icons/material-design-icons": "^12.0.0",
+    "@react-native/gradle-plugin": "^0.82.1",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.0",
